Circle and Shape classes implemented. Unit tests created for those

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<title></title>
 	</head>
 	<body>
-		<script type="text/javascript" src="tests/testBundle.js">
-		</script>
+		<script type="text/javascript" src="app/dist/bundle.js"></script>
 	</body>
 </html>
