Added UI for a circle shape

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 		<title></title>
 	</head>
 	<body>
+		<div class="shape-statistics--circle">
+			<p>Avg. area: <span class="shape-statistics__avg-area">0</span></p>
+			<p>Areas count: <span class="shape-statistics__areas-count">0</span></p>
+			<p>Last calculated area: <span class="shape-statistics__last-calculated-area">0</span></p>
+			<button class="shape-statistics__refresh-button">Calculate new area</button>
+		</div>
 		<script type="text/javascript" src="app/dist/bundle.js"></script>
 	</body>
 </html>
