--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 			<p>Last calculated area: <span class="shape-statistics__last-calculated-area">0</span></p>
 			<button class="shape-statistics__refresh-button">Calculate new area</button>
 		</div>
+		<div class="shape-statistics--triangle">
+			<p>Avg. area: <span class="shape-statistics__avg-area">0</span></p>
+			<p>Areas count: <span class="shape-statistics__areas-count">0</span></p>
+			<p>Last calculated area: <span class="shape-statistics__last-calculated-area">0</span></p>
+			<button class="shape-statistics__refresh-button">Calculate new area</button>
+		</div>
+		<div class="shape-statistics--square">
+			<p>Avg. area: <span class="shape-statistics__avg-area">0</span></p>
+			<p>Areas count: <span class="shape-statistics__areas-count">0</span></p>
+			<p>Last calculated area: <span class="shape-statistics__last-calculated-area">0</span></p>
+			<button class="shape-statistics__refresh-button">Calculate new area</button>
+		</div>
 		<script type="text/javascript" src="app/dist/bundle.js"></script>
 	</body>
 </html>
