Some styles added

--- a/index.html
+++ b/index.html
@@ -2,27 +2,31 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, user-scalable=no">
+		<link rel="stylesheet" href="app/assets/style.css" charset="utf-8">
 		<title></title>
 	</head>
 	<body>
-		<div class="shape-statistics--circle">
-			<p>Avg. area: <span class="shape-statistics__avg-area">0</span></p>
-			<p>Areas count: <span class="shape-statistics__areas-count">0</span></p>
-			<p>Last calculated area: <span class="shape-statistics__last-calculated-area">0</span></p>
-			<button class="shape-statistics__refresh-button">Calculate new area</button>
-		</div>
-		<div class="shape-statistics--triangle">
-			<p>Avg. area: <span class="shape-statistics__avg-area">0</span></p>
-			<p>Areas count: <span class="shape-statistics__areas-count">0</span></p>
-			<p>Last calculated area: <span class="shape-statistics__last-calculated-area">0</span></p>
-			<button class="shape-statistics__refresh-button">Calculate new area</button>
-		</div>
-		<div class="shape-statistics--square">
-			<p>Avg. area: <span class="shape-statistics__avg-area">0</span></p>
-			<p>Areas count: <span class="shape-statistics__areas-count">0</span></p>
-			<p>Last calculated area: <span class="shape-statistics__last-calculated-area">0</span></p>
-			<button class="shape-statistics__refresh-button">Calculate new area</button>
-		</div>
+		<main>
+			<div class="shape-statistics shape-statistics--circle">
+				<p>Avg. area: <span class="shape-statistics__avg-area">0</span></p>
+				<p>Areas count: <span class="shape-statistics__areas-count">0</span></p>
+				<p>Last calculated area: <span class="shape-statistics__last-calculated-area">0</span></p>
+				<button class="shape-statistics__refresh-button">Calculate new area</button>
+			</div>
+			<div class="shape-statistics shape-statistics--triangle">
+				<p>Avg. area: <span class="shape-statistics__avg-area">0</span></p>
+				<p>Areas count: <span class="shape-statistics__areas-count">0</span></p>
+				<p>Last calculated area: <span class="shape-statistics__last-calculated-area">0</span></p>
+				<button class="shape-statistics__refresh-button">Calculate new area</button>
+			</div>
+			<div class="shape-statistics shape-statistics--square">
+				<p>Avg. area: <span class="shape-statistics__avg-area">0</span></p>
+				<p>Areas count: <span class="shape-statistics__areas-count">0</span></p>
+				<p>Last calculated area: <span class="shape-statistics__last-calculated-area">0</span></p>
+				<button class="shape-statistics__refresh-button">Calculate new area</button>
+			</div>
+		</main>
 		<script type="text/javascript" src="app/dist/bundle.js"></script>
 	</body>
 </html>
